# GPT5-x-Claude-Code

./: .env.example  .gitignore  API.md  LICENSE  README.md  aidev.py  aidev.yaml.example  authController.js  authMiddleware.js  package.json  prompts.py  providers.py  pyproject.toml  routes.js  server.js  tools.py  userModel.js  workflow.sh
controllers/: userController.js
models/: userMockData.js
src/aidev/: __init__.py  cli.py  config.py  logging.py  prompts.py  providers.py  tools.py
tests/: __init__.py  test_config.py
